Archive2/82/78313498bb4058/output
main.cpp:4:41: error: field initializer is not constant
     static const std::vector<int> y = {1};
                                         ^
main.cpp:4:41: error: in-class initialization of static data member 'const std::vector<int> x::y' of non-literal type
main.cpp:4:41: error: non-constant in-class initialization invalid for static member 'x::y'
main.cpp:4:41: error: (an out of class initialization is required)
main.cpp:4:41: error: 'x::y' cannot be initialized by a non-constant expression when being declared
